# sgad

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pairwise.py  pairwise_3d.py  pyproject.toml
.github/workflows/: publish.yml
benchmarks/: benchmark_rust_vs_python.py  time_complexity.csv
rtf/: pairwise_20260310.rtf  pairwise_3d_20260310.rtf
rust/: Cargo.toml  pyproject.toml
rust/benches/: nw2d_short.rs
rust/src/: lib.rs
scripts/: analyze_nw_symmetry_2d.py  analyze_nw_symmetry_3d.py  build_rust.sh  check_nw_score_consistency.py  check_nw_score_consistency_3d.py  check_py_rust_nw_consistency.py  check_py_rust_nw_consistency_3d.py  check_score_alignment_swap_symmetry.py  check_swap_symmetry.py
src/sgad/: logger.py  pairwise.py  pairwise_3d.py  utils.py
src/sgad/alignment_parser/: __init__.py  _common.py  idt.py  primer3.py
src/sgad/api/: __init__.py  idt.py  primer3.py
src/sgad/rust/: __init__.py  pairwise.py  pairwise_3d.py
tests/: test_pairwise_symmetry.py  test_rust_consistency.py
