[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "sgad"
version = "0.1.0"
description = "Exact pairwise and 3D sequence alignment utilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["src"]
