[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "sgad"
version = "1.1.1"
description = "Exact pairwise and 3D sequence alignment utilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "joblib>=1.4.2",
  "numpy>=1.26",
  "pandas>=2.3.3",
  "primer3-py>=2.3.0",
  "requests>=2.32.5",
]

[tool.maturin]
bindings = "pyo3"
manifest-path = "rust/Cargo.toml"
python-source = "src"
module-name = "sgad.rust.sgad_rust_native"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "maturin>=1.7",
  "matplotlib>=3.8",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["src"]
