[features]
default = ["python-extension"]
python-extension = ["pyo3/extension-module"]

[package]
name = "sgad-rust-native"
version = "1.1.1"
edition = "2021"

[lib]
name = "sgad_rust_native"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["abi3-py310"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "nw2d_short"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
